syntax = "proto3";
package gravity.v1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gravity/v1/gravity.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/cosmos/gravity-bridge/module/x/gravity/types";

// Msg defines the state transitions possible within gravity
service Msg {
  rpc SendToEthereum(MsgSendToEthereum) returns (MsgSendToEthereumResponse) {
    // option (google.api.http).post = "/gravity/v1/send_to_ethereum";
  }
  rpc CancelSendToEthereum(MsgCancelSendToEthereum)
      returns (MsgCancelSendToEthereumResponse) {
    // option (google.api.http).post = "/gravity/v1/send_to_ethereum/cancel";
  }
  rpc RequestBatchTx(MsgRequestBatchTx) returns (MsgRequestBatchTxResponse) {
    // option (google.api.http).post = "/gravity/v1/batchtx/request";
  }
  rpc SubmitEthereumTxConfirmation(MsgSubmitEthereumTxConfirmation)
      returns (MsgSubmitEthereumTxConfirmationResponse) {
    // option (google.api.http).post = "/gravity/v1/ethereum_signature";
  }
  rpc SubmitEthereumEvent(MsgSubmitEthereumEvent)
      returns (MsgSubmitEthereumEventResponse) {
    // option (google.api.http).post = "/gravity/v1/ethereum_event";
  }
  rpc SetDelegateKeys(MsgDelegateKeys) returns (MsgDelegateKeysResponse) {
    // option (google.api.http).post = "/gravity/v1/delegate_keys";
  }
}

// MsgSendToEthereum submits a SendToEthereum attempt to bridge an asset over to
// Ethereum. The SendToEthereum will be stored and then included in a batch and
// then submitted to Ethereum.
message MsgSendToEthereum {
  string sender = 1;
  string ethereum_recipient = 2;
  cosmos.base.v1beta1.Coin amount = 3 [ (gogoproto.nullable) = false ];
  cosmos.base.v1beta1.Coin bridge_fee = 4 [ (gogoproto.nullable) = false ];
}

// MsgSendToEthereumResponse returns the SendToEthereum transaction ID which
// will be included in the batch tx.
message MsgSendToEthereumResponse { uint64 id = 1; }

// MsgCancelSendToEthereum allows the sender to cancel its own outgoing
// SendToEthereum tx and recieve a refund of the tokens and bridge fees. This tx
// will only succeed if the SendToEthereum tx hasn't been batched to be
// processed and relayed to Ethereum.
message MsgCancelSendToEthereum {
  uint64 id = 1;
  string sender = 2;
}

message MsgCancelSendToEthereumResponse {}

// MsgRequestBatchTx requests a batch of transactions with a given coin
// denomination to send across the bridge to Ethereum.
message MsgRequestBatchTx {
  string denom = 1;
  string signer = 2;
}

message MsgRequestBatchTxResponse {}

// MsgSubmitEthereumTxConfirmation submits an ethereum signature for a given
// validator
message MsgSubmitEthereumTxConfirmation {
  option (gogoproto.goproto_getters) = false;

  // TODO: can we make this take an array?
  google.protobuf.Any confirmation = 1
      [ (cosmos_proto.accepts_interface) = "EthereumTxConfirmation" ];
  string signer = 2;
}

// ContractCallTxConfirmation is a signature on behalf of a validator for a
// ContractCallTx.
message ContractCallTxConfirmation {
  bytes invalidation_scope = 1;
  uint64 invalidation_nonce = 2;
  string ethereum_signer = 3;
  bytes signature = 4;
}

// BatchTxConfirmation is a signature on behalf of a validator for a BatchTx.
message BatchTxConfirmation {
  string token_contract = 1;
  uint64 batch_nonce = 2;
  string ethereum_signer = 3;
  bytes signature = 4;
}

// SignerSetTxConfirmation is a signature on behalf of a validator for a
// SignerSetTx
message SignerSetTxConfirmation {
  uint64 signer_set_nonce = 1;
  string ethereum_signer = 2;
  bytes signature = 3;
}

message MsgSubmitEthereumTxConfirmationResponse {}

// MsgSubmitEthereumEvent
message MsgSubmitEthereumEvent {
  option (gogoproto.goproto_getters) = false;

  google.protobuf.Any event = 1
      [ (cosmos_proto.accepts_interface) = "EthereumEvent" ];
  string signer = 2;
}


message MsgSubmitEthereumEventResponse {}

// MsgDelegateKey allows validators to delegate their voting responsibilities
// to a given orchestrator address. This key is then used as an optional
// authentication method for attesting events from Ethereum.
message MsgDelegateKeys {
  string validator_address = 1;
  string orchestrator_address = 2;
  string ethereum_address = 3;
  bytes  eth_signature = 4;
}

message MsgDelegateKeysResponse {}

// DelegateKeysSignMsg defines the message structure an operator is expected to
// sign when submitting a MsgDelegateKeys message. The resulting signature should
// populate the eth_signature field.
message DelegateKeysSignMsg {
  string validator_address = 1;
  uint64 nonce = 2;
}

////////////
// Events //
////////////

// SendToCosmosEvent is submitted when the SendToCosmosEvent is emitted by they
// gravity contract. ERC20 representation coins are minted to the cosmosreceiver
// address.
message SendToCosmosEvent {
  option (gogoproto.equal) = true;

  uint64 event_nonce = 1;
  string token_contract = 2;
  string amount = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string ethereum_sender = 4;
  string cosmos_receiver = 5;
  uint64 ethereum_height = 6;
}

// BatchExecutedEvent claims that a batch of BatchTxExecutedal operations on the
// bridge contract was executed successfully on ETH
message BatchExecutedEvent {
  string token_contract = 1;
  uint64 event_nonce = 2;
  uint64 ethereum_height = 3;
  uint64 batch_nonce = 4;
}

// ContractCallExecutedEvent describes a contract call that has been
// successfully executed on Ethereum.

// NOTE: bytes.HexBytes is supposed to "help" with json encoding/decoding
// investigate?
message ContractCallExecutedEvent {
  uint64 event_nonce = 1;
  bytes invalidation_scope = 2
      [ (gogoproto.casttype) =
            "github.com/tendermint/tendermint/libs/bytes.HexBytes" ];
  uint64 invalidation_nonce = 3;
  uint64 ethereum_height = 4;
}

// ERC20DeployedEvent is submitted when an ERC20 contract
// for a Cosmos SDK coin has been deployed on Ethereum.
message ERC20DeployedEvent {
  uint64 event_nonce = 1;
  string cosmos_denom = 2;
  string token_contract = 3;
  string erc20_name = 4;
  string erc20_symbol = 5;
  uint64 erc20_decimals = 6;
  uint64 ethereum_height = 7;
}

// This informs the Cosmos module that a validator
// set has been updated.
message SignerSetTxExecutedEvent {
  uint64 event_nonce = 1;
  uint64 signer_set_tx_nonce = 2;
  uint64 ethereum_height = 3;
  repeated EthereumSigner members = 4;
}

